--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -19,6 +19,10 @@
         <i class="fa-solid fa-file-invoice-dollar mr-1"></i>
         <span id="latest-statement-text">Latest Statement</span>
       </a>
+      <div id="user-info" class="flex items-center">
+        <i class="fa-solid fa-circle-user mr-1"></i>
+        <span id="current-user">&nbsp;</span>
+      </div>
     </div>
   </div>
 </header>
